<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="New account"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/txt_24"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="Full name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorGray"
        android:textSize="@dimen/txt_16"
        android:focusable="true"
        android:clickable="true"
        />

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@color/colorGray"
        android:textSize="@dimen/txt_16"
        android:focusable="true"
        android:clickable="true"
        />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorGray"
        android:textSize="@dimen/txt_16"
        android:focusable="true"
        android:clickable="true"
        />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorGray"
        android:textSize="@dimen/txt_16"
        android:focusable="true"
        android:clickable="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dimen_16">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:background="@drawable/round_btn"
            android:layout_height="36dp"
            android:textSize="@dimen/txt_16"
            android:text="@string/create_account"
            android:paddingRight="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_10"
            android:textColor="@color/colorGreen"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            />
    </RelativeLayout>

</LinearLayout>